fix logo padding causing overflow and scroll on body

--- a/style-2.css
+++ b/style-2.css
@@ -24,7 +24,7 @@ body {
 #logo {
   display: block;
   width: 300px;
-  padding: 0 660px 20px 0;
+  padding: 0 0 20px 0;
   border: none;
   border-bottom: 1px solid #DCDCDC;
 }
